[package]
name = "simple-supply-chain"
version = "0.1.0"
edition = "2018"
authors = ["Your Name <youremail@example.com>"]
description = "A simple supply chain smart contract built with Ink!."
license = "MIT"

[repository]
type = "git"
url = "https://github.com/yourusername/simple-supply-chain.git"

[dependencies]
ink_lang = "3.0"
ink_storage = "3.0"
ink_env = "3.0"
scale-info = "2.0"

[features]
std = ["ink_env/derive", "ink_env/default-features"]